# CPP4_3DViewer_v2.0

./: .gitignore  README.md
src/: Makefile
src/Back/: fileReaderPlus.cc  matrix_transformation.h  model_facade.h  parser.cc  parser.h
src/Controller/: controller.cc  controller.h
src/Front/: 3DViewer.pro  CMakeLists.txt  Front.pro  glview.cpp  glview.h  main.cc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  observer.h
src/Front/GLView/: file_opening.cc  file_opening.cpp  glview.cc  glview.cpp  glview.h  transformation.cc  transformation.cpp
src/Front/MainWindow/: defaults.cc  defaults.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cc  settings.cpp  setup.cc  setup.cpp  setup.cpp~  transformation.cpp  ui.cpp  ui_bonuses.cc  ui_bonuses.cpp  ui_buttons.cc  ui_buttons.cpp  ui_comboboxes.cc  ui_comboboxes.cpp  ui_common.cpp
src/TestDir/: test.cc
src/testDir/: test.cc
